feat: implementar PostgreSQL utilizando Docker no projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=restaurante-backend
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/restaurante_db
+spring.datasource.username=postgres
+spring.datasource.password=senha123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
