🔧 chore(security): externalizar chave secreta JWT
- A chave secreta do JWT foi movida de uma constante hardcoded em `JwtUtil.java` para uma propriedade configurável.
- A chave agora é injetada via `@Value("${jwt.secret}")`, permitindo que seja definida por variáveis de ambiente (`JWT_SECRET`) ou propriedades do Spring.
- Fornece valores padrão distintos para os perfis `dev` e `prod` no `application.yml`, garantindo flexibilidade e segurança.
- Esta mudança melhora a segurança e a configurabilidade do aplicativo, evitando a exposição direta da chave secreta no código-fonte.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
       hibernate:
         format_sql: true
 
+jwt:
+  secret: ${JWT_SECRET:uma_chave_super_secreta_para_assinar_tokens_em_ambiente_de_desenvolvimento}
+
 ---
 # Configuração para produção (PostgreSQL)
 spring:
@@ -42,3 +45,6 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+
+jwt:
+  secret: ${JWT_SECRET:uma_chave_super_secreta_para_assinar_tokens_em_ambiente_de_produção}
